# luna

./: .env.example  .gitignore  README.md  google_scopes.py  pyproject.toml
docker/: Dockerfile  docker-compose.yml
mcp_calendar/: pyproject.toml
mcp_calendar/src/mcp_google_calendar/: __init__.py  server.py
mcp_contacts/: pyproject.toml
mcp_contacts/src/mcp_google_contacts/: server.py
mcp_reminders/: pyproject.toml
mcp_reminders/src/mcp_reminders/: __init__.py  server.py
scripts/: auth_google.py
src/luna/: __init__.py  bot.py  config.py  contacts.py  llm.py  memory.py
