[project]
name = "mcp-google-calendar"
version = "0.1.0"
description = "MCP Server for Google Calendar integration"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "google-api-python-client>=2.0.0",
    "google-auth-httplib2>=0.1.0",
    "google-auth-oauthlib>=1.0.0",
]

[project.scripts]
mcp-google-calendar = "mcp_google_calendar.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_google_calendar"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""
