[project]
name = "mcp-google-contacts"
version = "0.1.0"
description = "MCP Server for Google Contacts integration"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "google-api-python-client>=2.0.0",
    "google-auth-httplib2>=0.1.0",
    "google-auth-oauthlib>=1.0.0",
]

[project.scripts]
mcp-google-contacts = "mcp_google_contacts.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_google_contacts"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""
