[project]
name = "mcp-reminders"
version = "0.1.0"
description = "MCP Server for Reminders with timer-based scheduling"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
]

[project.scripts]
mcp-reminders = "mcp_reminders.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_reminders"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""
